--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,15 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
 
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180130</version>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
