--- a/frontend/notarial-blockchain-ui/tsconfig.json
+++ b/frontend/notarial-blockchain-ui/tsconfig.json
@@ -21,6 +21,11 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    "src/sw/*"
   ]
 }
