--- a/frontend/notarial-blockchain-ui/.eslintrc.json
+++ b/frontend/notarial-blockchain-ui/.eslintrc.json
@@ -8,7 +8,8 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react-hooks/recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -20,7 +21,8 @@
   },
   "plugins": [
     "simple-import-sort",
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "prettier"
   ],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
@@ -71,6 +73,9 @@
           ".tsx"
         ]
       }
+    ],
+    "prettier/prettier": [
+      "error"
     ]
   }
 }
