--- a/frontend/notarial-blockchain-ui/package.json
+++ b/frontend/notarial-blockchain-ui/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.3",
     "web-vitals": "^1.1.2"
@@ -58,5 +59,16 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "2.5.1"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".ts",
+          ".tsx",
+          ".native.js"
+        ]
+      }
+    }
   }
 }
