--- a/frontend/notarial-blockchain-ui/.eslintrc.json
+++ b/frontend/notarial-blockchain-ui/.eslintrc.json
@@ -55,6 +55,7 @@
     "simple-import-sort/imports": "warn",
     "no-console": "warn",
     "jsx-a11y/no-autofocus": "off",
+    "import/no-unresolved": "off",
     "no-use-before-define": "off",
     "react/no-array-index-key": "off",
     "react/function-component-definition": [
@@ -76,7 +77,10 @@
       }
     ],
     "prettier/prettier": [
-      "error"
+      "error",
+      {
+        "endOfLine": "auto"
+      }
     ]
   }
 }
